# arduino-core

./: .gitmodules  CMakeLists.txt  README
blinkLED/: CMakeLists.txt
cmake/: arduino-2009.cmake  arduino-diecimila.cmake  arduino-duemilanove.cmake  arduino-uno.cmake  arduino.cmake  arduino_diecimila_crosscompile.cmake
libs/: CMakeLists.txt
libs/Core/: CMakeLists.txt
libs/EEPROM/: CMakeLists.txt
libs/Ethernet/: CMakeLists.txt
libs/Ethernet/utility/: socket.cpp  w5100.cpp
libs/Firmata/: CMakeLists.txt
libs/LiquidCrystal/: CMakeLists.txt
libs/Matrix/: CMakeLists.txt
libs/SD/: CMakeLists.txt
libs/SPI/: CMakeLists.txt  SPI.h
libs/Servo/: CMakeLists.txt
libs/SoftwareSerial/: CMakeLists.txt
libs/Stepper/: CMakeLists.txt
libs/Wire/: CMakeLists.txt
libs/core/: CMakeLists.txt  config.h.in  pins_arduino.c  wiring_private.h
libs/libraries/: CMakeLists.txt
libs/libraries/EEPROM/: CMakeLists.txt
libs/libraries/Ethernet/: CMakeLists.txt  Client.cpp
libs/libraries/Firmata/: CMakeLists.txt
libs/libraries/LiquidCrystal/: CMakeLists.txt
libs/libraries/Matrix/: CMakeLists.txt
libs/libraries/SPI/: CMakeLists.txt
libs/libraries/Servo/: CMakeLists.txt
libs/libraries/SoftwareSerial/: CMakeLists.txt
libs/libraries/Sprite/: CMakeLists.txt
libs/libraries/Stepper/: CMakeLists.txt
libs/libraries/Wire/: CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/AFSoftSerial/: AFSoftSerial.cpp  AFSoftSerial.h  CMakeLists.txt
src/Console/: CMakeLists.txt  Console.cpp  Console.h
src/Core/: CMakeLists.txt  WString.cpp  WString.h  pins_arduino.c
src/E2PROM/: CMakeLists.txt  E2PROM.cpp  E2PROM.h
src/EEPROM/: CMakeLists.txt
src/Ethernet/: CMakeLists.txt
src/FAT16/: CMakeLists.txt
src/Fat16/: CMakeLists.txt
src/Firmata/: Boards.h  CMakeLists.txt
src/GSM/: CMakeLists.txt  GSM.cpp  GSM.h
src/LED/: CMakeLists.txt  LED.cpp  LED.h
src/LiquidCrystal/: CMakeLists.txt
src/Matrix/: CMakeLists.txt
src/Menu/: CMakeLists.txt  Menu.cpp  Menu.h
src/Morse/: CMakeLists.txt  Morse.cpp  Morse.h
src/NewSoftSerial/: CMakeLists.txt
src/SD/: CMakeLists.txt  SD.cpp  SD.h
src/SPI/: CMakeLists.txt
src/SdFat/: ArduinoPins.h  CMakeLists.txt  FatStructs.h  Sd2Card.cpp  Sd2Card.h  SdFat.cpp  SdFat.h  SdFatUtil.h  SdFatmainpage.h
src/SdFat/examples/SdFatAnalogLogger/: SdFatAnalogLogger.pde
src/SdFat/examples/SdFatAppend/: SdFatAppend.pde
src/SdFat/examples/SdFatAppend/applet/: SdFatAppend.cpp.hex
src/SdFat/examples/SdFatBench/: SdFatBench.pde
src/SdFat/examples/SdFatCopy/: SdFatCopy.pde
src/SdFat/examples/SdFatGPSLogger_v3/: SdFatGPSLogger_v3.pde
src/SdFat/examples/SdFatGPS_CSVSensorLogger/: SdFatGPS_CSVSensorLogger.pde
src/SdFat/examples/SdFatInfo/: SdFatInfo.pde
src/SdFat/examples/SdFatLs/: SdFatLs.pde
src/SdFat/examples/SdFatMakeDir/: SdFatMakeDir.pde
src/SdFat/examples/SdFatPrint/: SdFatPrint.pde
src/SdFat/examples/SdFatRawWrite/: SdFatRawWrite.pde
src/SdFat/examples/SdFatRead/: SdFatRead.pde
src/SdFat/examples/SdFatRemove/: SdFatRemove.pde
src/SdFat/examples/SdFatRewrite/: SdFatRewrite.pde
src/SdFat/examples/SdFatRmDir/: SdFatRmDir.pde
src/SdFat/examples/SdFatTail/: SdFatTail.pde
src/SdFat/examples/SdFatTimestamp/: SdFatTimestamp.pde
src/SdFat/examples/SdFatTruncate/: SdFatTruncate.pde
src/SdFat/examples/SdFatWrite/: SdFatWrite.pde
src/SerLCD/: CMakeLists.txt  SerLCD.cpp  SerLCD.h
src/Servo/: CMakeLists.txt
src/SoftwareSerial/: CMakeLists.txt
src/Sprite/: CMakeLists.txt
src/Stepper/: CMakeLists.txt
src/USBHost/: CMakeLists.txt
src/Wire/: CMakeLists.txt
utils/: CMakeLists.txt  dragonisp.in  isp.in
