message(STATUS "Including ${CMAKE_CURRENT_LIST_FILE}")

add_subdirectory(EEPROM)
add_subdirectory(Ethernet)
add_subdirectory(Firmata)
add_subdirectory(LiquidCrystal)
add_subdirectory(Matrix)
add_subdirectory(SPI)
add_subdirectory(Servo)
add_subdirectory(SoftwareSerial)
add_subdirectory(Sprite)
add_subdirectory(Stepper)
add_subdirectory(Wire)
